<resources>
    <string name="app_name">Messages</string>
    <string name="app_name_launcher"># Messages</string>
    <string name="one_inbox_for_every_conversation">One Inbox For Every Conversation</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="collection_title">A quick note about your data</string>
    <string name="collection_intro_1">We use limited device and app information to keep Messages fast, secure, and reliable, show ads that help keep the app free, and send you important notifications.</string>
    <string name="collection_intro_2">Your messages, contacts, and personal conversations are not collected for analytics or advertising and remain on your device.</string>
    <string name="collection_what_we_use">What we use and why:</string>
    <string name="collection_bullet_1">• App usage information - such as the screens you open and features you use - to improve performance and user experience</string>
    <string name="collection_bullet_2">• Device and app identifiers - to save your preferences, improve app stability, and support notifications</string>
    <string name="collection_bullet_3">• General location based on your network - to understand usage trends and provide region-relevant features</string>
    <string name="collection_bullet_4">• Advertising identifiers - to display and measure ads that help keep the app free</string>
    <string name="collection_footer">By tapping Agree &amp; Continue, you agree to our Terms of Service and acknowledge our Privacy Policy. We collect only the information described above to improve the app, provide essential features, and support advertising. Your personal messages and conversations remain private.</string>
    <string name="collection_agree_checkbox">I agree to this data collection</string>
    <string name="collection_agree_continue">Agree &amp; Continue</string>
    <string name="collection_agree_toast">Please agree to data collection to continue.</string>
    <string name="terms">Terms</string>
    <string name="set_default_sms">Set Default SMS</string>
    <string name="set_default_sms_desc">Set this app as your default SMS app to keep all your messages organized, secure, and easy to manage.</string>
    <string name="set_as_default_sms">Set As Default SMS</string>
    <string name="set_default_app">Set Default App</string>
    <string name="set_default_app_desc">Set this app as your default Home launcher to enjoy a faster, cleaner, and personalized home screen experience.</string>
    <string name="set_as_default_app">Set As Default App</string>
    <string name="intro_1_title">Smart Messaging</string>
    <string name="intro_1_description">Manage conversations efficiently with organized, secure, and instant messaging experience.</string>
    <string name="intro_2_title">Real-Time Chat</string>
    <string name="intro_2_description">Connect instantly through fast, reliable, and seamless real-time conversations daily.</string>
    <string name="intro_3_title">Contact Management</string>
    <string name="intro_3_description">Organize contacts effortlessly for faster communication and improved accessibility anytime.</string>
    <string name="intro_4_title">Chat Archived</string>
    <string name="intro_4_description">Securely store important conversations for quick access whenever needed later.</string>
    <string name="please_allow_permissions_from_app_settings">Please allow permissions from app settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="overlay_permission_required">Overlay Permission Required</string>
    <string name="overlay_permission_description">This app need overlay permission to show popup message windows.</string>
    <string name="permission_required">Required Permission</string>
    <string name="permission_message_description">Meesage permission is required to access your messages and send qiuck message.</string>
    <string name="permission_contact_description">Contacts permission is required to access your saved contacts and quick call.</string>
    <string name="your_conversation_will_appear_here">Your conversation will appear here</string>
    <string name="allow">Allow</string>
    <string name="your_contacts_will_appear_here">Your contacts will appear here</string>
    <string name="search_message">Search Messages</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="personal">Personal</string>
    <string name="transaction">Transaction</string>
    <string name="otp">OTP</string>
    <string name="offer">Offer</string>
    <string name="blocked">Blocked</string>
    <string name="to_move_this_conversation_out_of_blocking_and_get_messages_again_unblock">To move this conversation out of \'Blocking\' and get messages again, unblock</string>
    <string name="sender_does_not_support_replies">Sender does not support replies</string>
    <string name="this_conversation_blocked_by_you">This conversation blocked by you</string>
    <string name="enter_message">Enter Message</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="send_failed">Message failed to send</string>
    <string name="send_sms_permission_required">SMS permission is required to send messages</string>
    <string name="mark_as_all_read">Mark As All Read</string>
    <string name="add_to_contact">Add to Contact</string>
    <string name="archived">Archived</string>
    <string name="unarchived">Unarchived</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="restore_from_bin">Restore From Bin</string>
    <string name="change_langauge">Change Langauge</string>
    <string name="search_contact">Search Contacts</string>
    <string name="app_language">App Language</string>
    <string name="system_default">System Default</string>
    <string name="delay_sending">Delay Sending</string>
    <string name="no_delay">No Delay</string>
    <string name="signatures">Signatures</string>
    <string name="add_your_signature">Add your signature</string>
    <string name="launcher_settings">Launcher Settings</string>
    <string name="customize_your_layout_and_icons">Customize your layout and icons</string>
    <string name="about_messages">About Messages</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="_3_sec_delay">3 Sec Delay</string>
    <string name="_5_sec_delay">5 Sec Delay</string>
    <string name="_10_sec_delay">10 Sec Delay</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="delete">Delete</string>
    <string name="dash">-</string>
    <string name="save">Save</string>
    <string name="serialize">Serialize</string>
    <string name="by_name_asc_a_to_z">By Name ASC (A to Z)</string>
    <string name="by_name_desc_z_to_a">By Name DESC (Z to A)</string>
    <string name="by_installed_date">By Installed Date</string>
    <string name="preview">Preview</string>
    <string name="label_visibility">Label Visibility</string>
    <string name="hide_app_name">Hide app name</string>
    <string name="app_icon_size">App Icon Size</string>
    <string name="app_label_size">App Label Size</string>
    <string name="_10">10</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="move_to_bin">Move to Bin</string>
    <string name="are_you_sure_you_want_to_move_to_bin_this_message">Are you sure you want to move to bin this message ?</string>
    <string name="are_you_sure_you_want_to_block_this_message">Are you sure you want to block this message ?</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="are_you_sure_you_want_to_delete_permanently_this_message">Are you sure you want to delete permanently this message ?</string>
    <string name="toast_archived">Archived</string>
    <string name="toast_unarchived">Unarchived</string>
    <string name="toast_blocked">Blocked</string>
    <string name="toast_unblocked">Unblocked</string>
    <string name="toast_moved_to_recycle_bin">Moved to recycle bin</string>
    <string name="toast_restored_from_bin">Restored from recycle bin</string>
    <string name="toast_conversation_deleted">Conversation deleted</string>
    <string name="toast_pinned">Pinned to top</string>
    <string name="toast_unpinned">Unpinned</string>
    <string name="selected">Selected</string>
    <string name="no_archived_messages">No Archived Messages</string>
    <string name="no_block_messages">No Block Messages</string>
    <string name="no_data_found">No Data Found</string>
    <string name="recycle_bin_empty">Recycle Bin Empty</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="backup_and_restore_message_easily">Backup and restore message easily</string>
    <string name="backup_location">Backup Location</string>
    <string name="set_folder">Set Folder</string>
    <string name="restore">Restore</string>
    <string name="select_a_backup">Select a Backup</string>
    <string name="currently_only_sms_is_supported_by_backup_and_restore_mms_support_and_scheduled_backups_will_be_coming_soon">Currently, only SMS is supported by backup and restore. MMS support and scheduled backups will be coming soon!</string>
    <string name="backup_now">Backup Now</string>
    <string name="backup_backing_up">Backing up messages</string>
    <string name="backup_restoring">Restoring from backup</string>
    <string name="backup_parsing">Parsing backup…</string>
    <string name="backup_saving">Saving backup…</string>
    <string name="backup_syncing">Syncing messages…</string>
    <string name="backup_finished">Finished!</string>
    <string name="backup_progress">%1$d/%2$d messages</string>
    <string name="backup_message_count">%1$d messages</string>
    <string name="backup_restore_dialog_title">Backups</string>
    <string name="backup_restore_dialog_empty">No backups found</string>
    <string name="backup_restore_confirm_title">Restore from backup</string>
    <string name="backup_restore_confirm_message">Are you sure you would like to restore your messages from this backup?</string>
    <string name="backup_error_title">Error</string>
    <string name="backup_error_read">Couldn\'t read backup file</string>
    <string name="backup_select_location_first">Please select a backup location first</string>
    <string name="backup_permission_required">SMS permission is required for backup and restore</string>
    <string name="backup_default_app_required">Please set this app as the default SMS app to restore messages</string>
    <string name="backup_stop_restore_title">Stop restore?</string>
    <string name="backup_stop_restore_message">Messages that have already been restored will remain on your device</string>
    <string name="stop">Stop</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="trending_news">Trending News</string>
    <string name="read_more">Read More</string>
    <string name="loading_ads">Loading Ads…</string>
    <string name="this_action_may_contain_ads">This action may contain Ads</string>
    <string name="markrting_converter1">gclid</string>
    <string name="utm_source_apps_facebook_com">utm_source=apps.facebook.com</string>
    <string name="utm_source_apps_instagram_com">utm_source=apps.instagram.com</string>
</resources>