<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fig_tree_semibold"
                android:text="@string/collection_title"
                android:textColor="@color/primary"
                android:textSize="@dimen/_18sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIntro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_intro_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIntro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_intro_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWhatWeUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/fig_tree_semibold"
                android:text="@string/collection_what_we_use"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBullet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_bullet_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBullet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_bullet_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBullet3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_bullet_3"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBullet4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_bullet_4"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/fig_tree_medium"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/collection_footer"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/llAgreeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbAgree"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:background="@null"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            app:buttonCompat="@drawable/custom_checkbox_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAgreeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:fontFamily="@font/fig_tree_medium"
            android:text="@string/collection_agree_checkbox"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/btnAgreeContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_margin="@dimen/_12sdp"
        app:shimmer_base_alpha="1"
        app:shimmer_duration="1500"
        app:shimmer_highlight_alpha="0.4">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAgreeContinue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/fig_tree_medium"
            android:gravity="center"
            android:text="@string/collection_agree_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:id="@+id/rlAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlBannerAdView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_62sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/divider" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/slBannerShimmer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true">

                <include layout="@layout/banner_ad_shimmer" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <LinearLayout
                android:id="@+id/llBannerAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlNativeAdView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_62sdp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/divider" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/slNativeShimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <include layout="@layout/native_small_ad_shimmer" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <FrameLayout
                android:id="@+id/flNativeAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>